re configuracion del backend para poder crear videos e usar los cor desde el frontend